--- a/gitcards/src/App.css
+++ b/gitcards/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.github-profile {
+    margin: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+    width: 75px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.info {
+    display: inline-block;
+    margin-left: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.name {
+    font-size: 1.25rem;
+    font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+    border: thin solid #888;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
